# BigBrother

./: .gitignore  Makefile  README.md  README.txt  def_colors.hpp  image.hpp  main.cpp  main.cpp.old  manager.cpp  manager.hpp  marker.cpp  marker.hpp  rectangle.cpp  rectangle.hpp
soft/detector/: CMakeLists.txt  Makefile
soft/detector/config/: config_wrapper.txt  def_colors.hpp  def_comm.hpp
soft/detector/source/: area.hpp  aruco_marker.cpp  aruco_marker.hpp  calibrate_controller.cpp  calibrate_controller.hpp  color.hpp  color_chooser_gui.cpp  color_chooser_gui.hpp  color_set.hpp  communication.cpp  communication.hpp  config.hpp  data.hpp  detector_controller.cpp  detector_controller.hpp  gui.cpp  gui.hpp  hsv_controller.hpp  image.hpp  image_3d.hpp  input_controller.cpp  input_controller.hpp  list.hpp  luv_controller.hpp  main.cpp  marker.cpp  marker.hpp  position_marker.hpp  rectangle.cpp  rectangle.hpp  util.hpp  video_controller.cpp  video_controller.hpp  wrapper.py
soft/marker_generator/: main.cpp
soft/rasp_autostart/: autostart.sh
soft/tests/: test_color_luv.cpp
soft/triangulator/config/: config.txt
soft/triangulator/source/: server.py
